# ChangeLog for dev-ruby/commander
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/commander/ChangeLog,v 1.5 2014/03/28 15:34:05 mrueg Exp $

  28 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -commander-4.1.5-r1.ebuild:
  Cleanup old.

*commander-4.1.6 (12 Feb 2014)

  12 Feb 2014; Hans de Graaff <graaff@gentoo.org> +commander-4.1.6.ebuild:
  Version bump.

  17 Nov 2013; Manuel Rüger <mrueg@gentoo.org> -commander-4.1.5.ebuild:
  Cleanup old.

*commander-4.1.5-r1 (06 Oct 2013)

  06 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +commander-4.1.5-r1.ebuild:
  Add ruby20 target.

*commander-4.1.5 (19 Aug 2013)

  19 Aug 2013; Manuel Rüger <mrueg@gentoo.org> +commander-4.1.5.ebuild,
  +metadata.xml:
  Initial version.