@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST commander-4.1.6.gem 32256 SHA256 4bd7cbc75bad33a2b1ecb53980ab3aaf648d64ba81da04e4a3920f041c443175 SHA512 015bc65757fcbbaae29a8abc384f2c4cf76245ee0bc85701da42c3e202bb4e07805f7d15c022f77296cbd5cd9bc3c736fd3fd07e0bf55003f5f8dba0b485a61c WHIRLPOOL cc6f9724e1b536fc43d9f6e32139c38798ee066547c83194ce7eb91d52e0bbdb045d989172ecc23c9e57a8447b0131d6aae45a42ec48d9e398ada400eadeb635
+DIST commander-4.2.0.gem 33280 SHA256 cc67a24f7eec5688182190cd64a6c26e6561891244e242adb043888ae9f45aba SHA512 869b04adaa0ef84bd8df4e41718a51ef9b7bb6eba51dcf33a6f855a121f97dd82c2922d542b9e2510ed8333cd2df766a7e7f3b1ea045c3d90817f857f42d8780 WHIRLPOOL d25bfe59b35f6da9bd4a56f77d647eebacfda6a4818b9c15421ea3722b380c58d86274ee236931b734b69cd5121ae93e319ef93c9b07aee07c73d6598059f26e
 EBUILD commander-4.1.6.ebuild 693 SHA256 3c0100e6bd44a2bad8cb5fade1d0f295c3d2924836369895c66673aa3e9b25bc SHA512 e00364fc4f18df985209d24d00fe298d1d66ca8662a96ceda4038adaac86f89da40e6481a06aa8a51a2887ce7223853167d762487dc35c02ccd351c6788d478c WHIRLPOOL 97af71d3f40c34cce10c0993a43679f815f3e2e0e2414e6d6d7d8ea166e85c71a809f05debbb92a3a6ffe1a605551bbedb6b3169dd288ddb3847267020f1763d
-MISC ChangeLog 787 SHA256 5e0c016aebd80dafc48399d5b53e0e36cd53100adfa2b2eececd11c576a23b05 SHA512 f42583139e0aa271309624c9d0e50ca7d7495ddc5a33c615fc4082f0ae9bc135bd6e2efeb361b3f533c17323730d5daea1d7211ceb02d3ee6ce51f7a39180bfd WHIRLPOOL b9280aaa9519e8c08bf71c6209667b93d103702aa574eea873c1dc040afed1ca1cab6ba2be7a369ec79c938e7e945e924a913d64de1d60d6bdf634e8aea37b19
+EBUILD commander-4.2.0.ebuild 706 SHA256 44a8b8aad16d3634a06c21934d2e54f88c22c5a1534759f27d016f1e576607c2 SHA512 c1e96a9e088734d00e4ffbbe219b24a5a714e0da9905e043335bf069d72bca2e97576277b67a8e3db4ec15f47e8ab4a0c6856bed3f365acf3caaeaa3e7087950 WHIRLPOOL 76b242c805031227c4b3998bb76993392e6a1b6d9e1cee177c607be8c73197b0d754805a32ec68a419f058f4334db3de0bff69a10619f82aa9a44b399378ca50
+MISC ChangeLog 910 SHA256 2ac232d43c2a4dba7c501abc4296262de8feba99f7ccc5fd93ce917fa05b72b0 SHA512 cbd3175518f5585f8fb4a22989238ee74226d1e18e2426bc33de5f35db7d0e90322e95085792a025b169db3d15746ebe58da7b1dda1479bf0940161bb2b99a15 WHIRLPOOL 448a955c124ca5d508e7b9ff75941b1169a3515006d8edad1a4658dd3bbdc786bf25447b6400a2167f3efa7082f7d0175210d7d9cc028edcc97fcbc62606c969
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlNjtJIACgkQiIP6VqMIqNckGAD9EWMGqjBi0YU+u22KsBJcY6b9
+MuRw0O67O/hkHn4VCOcA/jD0LqND2JMkjbmlFRh1FZ/VNHMYFZJFoKq1AiVt8xA/
+=j1Nz
+-----END PGP SIGNATURE-----
