@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/commander
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/commander/ChangeLog,v 1.5 2014/03/28 15:34:05 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/commander/ChangeLog,v 1.6 2014/05/02 15:06:57 graaff Exp $
+
+*commander-4.2.0 (02 May 2014)
+
+  02 May 2014; Hans de Graaff <graaff@gentoo.org> +commander-4.2.0.ebuild:
+  Add ruby21.
 
   28 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -commander-4.1.5-r1.ebuild:
   Cleanup old.
